--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
             flex: 1;
             width: 100%;
             display: flex;
+            flex-direction: row;
             gap: 20px;
             height: calc(100vh - 40px);
         }
