--- a/templates/index.html
+++ b/templates/index.html
@@ -69,21 +69,26 @@
             position: relative;
             min-height: 600px;
             height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         #viewer {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            position: relative;
+            width: 100%;
+            height: 100%;
             background: #000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         #viewer canvas {
             width: 100% !important;
             height: 100% !important;
             outline: none;
+            display: block;
         }
 
         .header-section {
