Update footer attribution text format

--- a/templates/index.html
+++ b/templates/index.html
@@ -419,7 +419,7 @@
             © 2025 <a href="https://kamathsblog.com/" target="_blank">kamathsblog.com</a>
         </div>
         <div class="attribution">
-            Created by <a href="https://github.com/adityakamath/rotation-converter" target="_blank">Aditya Kamath</a>
+            Created by Aditya Kamath | <a href="https://github.com/adityakamath/rotation-converter" target="_blank">GitHub Repo</a>
         </div>
     </div>
 
