--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 
         .header-section {
             text-align: center;
-            margin-bottom: 25px;
+            margin: 20px 0 25px 0;
         }
 
         .title {
