--- a/templates/index.html
+++ b/templates/index.html
@@ -567,6 +567,18 @@
                 inputs[1].placeholder = 'Axis X (normalized)';
                 inputs[2].placeholder = 'Axis Y (normalized)';
                 inputs[3].placeholder = 'Axis Z (normalized)';
+            } else if (format === 'quaternion') {
+                const inputs = document.getElementById('quaternion-inputs').getElementsByTagName('input');
+                inputs[0].placeholder = 'w (real)';
+                inputs[1].placeholder = 'x (i)';
+                inputs[2].placeholder = 'y (j)';
+                inputs[3].placeholder = 'z (k)';
+            } else if (format === 'matrix') {
+                const inputs = document.getElementById('matrix-inputs').getElementsByTagName('input');
+                const labels = ['11', '12', '13', '21', '22', '23', '31', '32', '33'];
+                labels.forEach((label, index) => {
+                    inputs[index].placeholder = `m${label}`;
+                });
             }
         }
 
